# cli-kontor

./: .gitignore  .pre-commit-config.yaml  .rules.ts  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLANS.md  README.md  RULES.md  config.example.yaml  prek.toml  pyproject.toml
.ai/: matrix.json
.ai/drift/: last-drift.json  last-generation.json  migration-manifest.json
.ai/evals/: coverage-exceptions.json
.ai/handoff/: init-ai-repo-handoff.md  northstar-agent-supplied-email-triage.md  northstar-inline-rules-engine-classify.md
.ai/init/: repo-profile.json  sdlc-path.md
.ai/mcp/: a2a-handoff.md  registry.json
.ai/observability/: audit-checklist.md  conventions.md
.ai/plans/: init-ai-sdlc-plan.md
.ai/policies/: model-routing.json
.ai/reviews/: ai-failure-modes.md
.ai/rules/: protected-edit-approvals.md  security.md  technical-bounds.md
.ai/skills/: git-ops.json  workspace-sync.json
.ai/system-prompts/: architect.md  developer.md  qa-engineer.md
.ai/tests/: test_protected_edit_approval.py
.ai/traceability/: graph.json  index.md  validation-report.md
.ai/validation/: report.md
.ai/work-intake/: agent-supplied-email-triage.md  init-ai-sdlc.md  inline-rules-engine-classify.md
.ai/workflows/: repo-workflow.json  repo-workflow.md
.github/workflows/: ci-prek.yml  ci.yml  tests.yml
.memory/self-learned/: CHANGELOG.md  module-complexity.json
.omc/plans/: README.md
.omc/specs/: README.md  (+1 more)
.omc/wiki/: README.md
docs/: folder-improvements-2026-06-03.md
rules/: rules.py
scripts/: archgate.sh  validate-rules.sh
(+54 files in other folders)
